; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/marvell/octeontx2/af/extr_rvu.c_rvu_alloc_rsrc_contig.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/marvell/octeontx2/af/extr_rvu.c_rvu_alloc_rsrc_contig.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rsrc_bmap = type { i32, i32 }

@EINVAL = common dso_local global i32 0, align 4
@ENOSPC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rvu_alloc_rsrc_contig(%struct.rsrc_bmap* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.rsrc_bmap*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.rsrc_bmap* %0, %struct.rsrc_bmap** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.rsrc_bmap*, %struct.rsrc_bmap** %4, align 8
  %8 = getelementptr inbounds %struct.rsrc_bmap, %struct.rsrc_bmap* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %14, label %11

11:                                               ; preds = %2
  %12 = load i32, i32* @EINVAL, align 4
  %13 = sub nsw i32 0, %12
  store i32 %13, i32* %3, align 4
  br label %39

14:                                               ; preds = %2
  %15 = load %struct.rsrc_bmap*, %struct.rsrc_bmap** %4, align 8
  %16 = getelementptr inbounds %struct.rsrc_bmap, %struct.rsrc_bmap* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.rsrc_bmap*, %struct.rsrc_bmap** %4, align 8
  %19 = getelementptr inbounds %struct.rsrc_bmap, %struct.rsrc_bmap* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* %5, align 4
  %22 = call i32 @bitmap_find_next_zero_area(i32 %17, i32 %20, i32 0, i32 %21, i32 0)
  store i32 %22, i32* %6, align 4
  %23 = load i32, i32* %6, align 4
  %24 = load %struct.rsrc_bmap*, %struct.rsrc_bmap** %4, align 8
  %25 = getelementptr inbounds %struct.rsrc_bmap, %struct.rsrc_bmap* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = icmp sge i32 %23, %26
  br i1 %27, label %28, label %31

28:                                               ; preds = %14
  %29 = load i32, i32* @ENOSPC, align 4
  %30 = sub nsw i32 0, %29
  store i32 %30, i32* %3, align 4
  br label %39

31:                                               ; preds = %14
  %32 = load %struct.rsrc_bmap*, %struct.rsrc_bmap** %4, align 8
  %33 = getelementptr inbounds %struct.rsrc_bmap, %struct.rsrc_bmap* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 4
  %35 = load i32, i32* %6, align 4
  %36 = load i32, i32* %5, align 4
  %37 = call i32 @bitmap_set(i32 %34, i32 %35, i32 %36)
  %38 = load i32, i32* %6, align 4
  store i32 %38, i32* %3, align 4
  br label %39

39:                                               ; preds = %31, %28, %11
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local i32 @bitmap_find_next_zero_area(i32, i32, i32, i32, i32) #1

declare dso_local i32 @bitmap_set(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
